Remove any file that has 'scratch_' in it

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,7 @@ data
 .RData
 .Rproj.user
 .Rhistory
-.DS_Storea
-.scratch_*.*
+.DS_Store
+scratch_*.*
+MyLA311_Service_Request_Data_2016.csv
+MyLA311_Service_Request_Data_2017.csv
